--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -17,14 +17,14 @@
 
     title.append('<%= @course.title %>')
 
-    const search = document.querySelector('form#searchForm')
+    const searchForm = document.querySelector('form#searchForm')
     const dropdown = document.querySelector('div.dropdown')
 
 
 
 
     dropdown.remove()
-    search.remove()
+    searchForm.remove()
     labels.remove()
 
 </script>
