basic loading added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,9 +39,9 @@
                               <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                                  Sort By 
                               </button>
-                              <ul class="dropdown-menu sort-list">
+                              <ul class="dropdown-menu sort-list" id="sorter-list">
                                  <!-- Dropdown menu links -->
-                                 <li class="dropdown-item">Course Code</li>
+                                 <li class="dropdown-item active">Course Code</li>
                                  <li class="dropdown-item">Gut Index</li>
                                  <li class="dropdown-item">Overall Rating</li>
                                  <li class="dropdown-item">Professor Rating</li>
