--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -30,7 +30,7 @@
 
 <% end %>
 <script>
-    const OFFSET = 500
+    const OFFSET = 250
     let gutActive = false
     let coursesLoaded = false
     const body = document.querySelector('div#main-body')
@@ -275,6 +275,90 @@ function ordinal(n) {
     return n + (s[(v-20)%10] || s[v] || s[0]);
 }
 
+// ADD OBSERVER
+
+var observer = new IntersectionObserver(function(entries) {
+	if((entries[0].isIntersecting === true)) {
+		console.log('Element is fully visible in screen');
+
+        const spinnerContainer = document.createElement('tr')
+
+        spinnerContainer.id = "spinner-container"
+        spinnerContainer.innerHTML = `
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td class="mt-3">          
+            <div class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        `
+
+
+
+
+        
+
+        if (!coursesLoaded) {
+            table.append(spinnerContainer)
+            const sorter = document.querySelector('ul#sorter-list li.active').textContent
+
+            const title = document.querySelector('h1#table-title')
+
+            const season = title.dataset.id
+
+            if (sorter === "Gut Index") {
+                loadSortMoreCourses(season, "gut_index", "DESC")
+            } else if (sorter === "Overall Rating") {
+                loadSortMoreCourses(season, "average_rating", "DESC")
+            } else if (sorter === "Professor Rating") {
+                loadSortMoreCourses(season, "average_professor", "DESC")
+            } else if (sorter === "Work Rating") {
+                loadSortMoreCourses(season, "average_workload", "ASC")
+            } else if (sorter === "Course Code") {
+                loadSortMoreCourses(season, "course_code", "ASC")
+            }
+
+            coursesLoaded = true
+        }
+
+
+        
+    }
+    
+}, { threshold: [1] });
+
+function startObserve() {
+    let trArr = document.querySelectorAll('tbody#catalog-body tr:not([style*="display: none;"]')
+    observer.unobserve(trArr[trArr.length-1].querySelector('td'))
+    trArr = document.querySelectorAll('tbody#catalog-body tr:not([style*="display: none;"]')
+
+    if (document.querySelector('input#searchBar').value === "") {
+    console.log('<%= params[:search_val]%>')
+
+        observer.observe(trArr[trArr.length-1].querySelector('td'));
+    }
+}
+
+startObserve()
+
+// FILTER AND SEARCH
+
 function filterGut(undo=false) {
     
     const searchBar = document.querySelector('input#searchBar')
@@ -308,6 +392,11 @@ function filterGut(undo=false) {
             rows[i].style.display = ""
         }
     } 
+
+    if (!coursesLoaded) {
+        startObserve()
+    }
+    
 
 }
 
@@ -346,6 +435,32 @@ function loadSortCourses(season, sorter, direction) {
     })
 }
 
+function loadSortMoreCourses(season, sorter, direction) {
+    fetch(`http://127.0.0.1:3000/courses/sort_more/${season}/${sorter}/${direction}`)
+    .then(r => r.json())
+    .then(courses => {
+        
+        courses.forEach(createOneCourse)
+
+        if (gutActive) {
+            filterGut()
+        }
+
+        if (searchBar.value != "") {
+            search()
+        }
+
+        if (document.querySelector('tr#spinner-container')) {
+            document.querySelector('tr#spinner-container').remove()
+        }
+
+
+
+        
+
+    })
+}
+
 
 
 // observe on page load 
@@ -377,6 +492,8 @@ function search() {
             rows[i].style.display = "none"
         }
     } 
+
+    startObserve()
 }
 
 
@@ -405,9 +522,10 @@ gutSwitch.addEventListener('click', event => {
 
     const season = title.dataset.id
     filterGut()
+    
 
     if (gutActive) {
-        filterGut(undo=true)
+        // filterGut(undo=true)
         gutActive = false
         
         gutSwitch.classList.add('active')
@@ -432,9 +550,20 @@ gutSwitch.addEventListener('click', event => {
 
 sortList.addEventListener('click', event => {
     if (event.target.matches('li')) {
+
+        if (coursesLoaded === true) {
+            coursesLoaded = false
+        }
+
         const sorter = event.target.textContent
         const title = document.querySelector('h1#table-title')
         const season = title.dataset.id
+
+        const activeSorted = document.querySelector('ul#sorter-list li.active')
+
+        activeSorted.classList.remove('active')
+
+        event.target.classList.add('active')
 
         table.innerHTML = ""
         if (sorter === "Gut Index") {
