--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -7,7 +7,7 @@
 
         const button = document.createElement('a')
 
-    button.innerHTML = '<a class="btn-primary btn btn-sm ms-2 mb-2" type="button" href="/courses/season/<%= @course.season_code%>">Back to Catalog</a>'
+    button.innerHTML = '<a class="btn-primary btn btn-sm ms-2 mb-1 me-3" type="button" href="/courses/season/<%= @course.season_code%>">Back to Catalog</a>'
 
     title.textContent = ''
 
