--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -618,7 +618,7 @@ gutSwitch.addEventListener('click', event => {
 
 sortList.addEventListener('click', event => {
     if (event.target.matches('li')) {
-        filterGut(undo=true)
+        // filterGut(undo=true)
 
         if (coursesLoaded === true) {
             coursesLoaded = false
@@ -637,6 +637,38 @@ sortList.addEventListener('click', event => {
         table.innerHTML = ""
         if (sorter === "Gut Index") {
             loadSortCourses(season, "gut_index", "DESC")
+            if (coursesLoaded === false) {
+            const spinnerContainer = document.createElement('tr')
+
+            spinnerContainer.id = "spinner-container"
+            spinnerContainer.innerHTML = `
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="mt-3">          
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            `
+            table.append(spinnerContainer)
+                loadSortMoreCourses(season, "gut_index", "DESC")
+                coursesLoaded = true
+            }
         } else if (sorter === "Overall Rating") {
             loadSortCourses(season, "average_rating", "DESC")
         } else if (sorter === "Professor Rating") {
@@ -646,6 +678,8 @@ sortList.addEventListener('click', event => {
         } else if (sorter === "Course Code") {
             loadSortCourses(season, "course_code", "ASC")
         }
+
+
 
         // startObserve()
         
