--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,11 @@
  */
  body {
     font-size: .875rem;
+    
+  }
+
+  td, th {
+    color: white;
   }
   
   .feather {
@@ -29,6 +34,7 @@
   
   .sidebar {
     position: fixed;
+    color: white;
     top: 0;
     /* rtl:raw:
     right: 0;
@@ -79,12 +85,17 @@
     font-size: .75rem;
     text-transform: uppercase;
   }
+
+  h1#table-title {
+    color: white;
+  }
   
   /*
    * Navbar
    */
   
   .navbar-brand {
+    color: white;
     padding-top: 1rem;
     padding-bottom: 1rem;
     font-size: 1rem;
