--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,15 +16,15 @@
   </head>
 
    <body>
-      <div class="container-fluid ">
+      <div class="container-fluid bg-dark">
          <div class="row">
-            <nav id="sidebarMenu" class="bg-white col-md-2 col-lg-1 pt-0 d-md-block sidebar collapse">
+            <nav id="sidebarMenu" class="bg-light-gray col-md-2 col-lg-1 pt-0 d-md-block sidebar collapse">
                <div class="position-sticky pt-2">
                   <div class="text-center justify-content-center">
                      <%= image_tag('/images/yuts-logo.png', :size => "100x75")%>
                      <h3 class="px-auto logo"><strong><em>YUTS</em></strong></h3>
                   </div>
-                  <div class="card text-center mt-3">
+                  <div class="card bg-dark text-center mt-3">
                      <div class="card-header py-3">
                         
                      </div>
@@ -89,7 +89,7 @@
                   </div>
                </div>
                <div id="main-body">
-                  <table class="table table-striped table-sticky table-hover">
+                  <table class="table table-striped table-sticky table-hover table-dark">
                      <thead id="table-head">
                         <tr>
                            <th scope="col">Code</th>
